[tool.poetry]
name = "named-entity-recognition"
version = "0.1.0"
description = ""
authors = ["theofilusarifin <theofilusarifin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gliner = "^0.2.13"
pip = "^24.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
